2008-10-20  Esteban Sanchez  <estebans@artica.es>

	* general/header.php: Added a link to the main page at top right logo.
	Style correction and renamed the "bye" parameter to "logout", which is
	more clear.

	* index.php: Use "logout" parameter.

	* general/main_menu.php, godmode/menu.php: Deleted from repository.
	Old and unused file.

	* godmode/grupos/configurar_grupo.php: Fixed the default user combo.
	Style correction.

	* godmode/grupos/lista_grupos.php: Added AJAX support to get group
	details. Fixed default user assignment on insert and update.

	* godmode/usuarios/configurar_usuarios.php: Removed use of
	help_label().

	* include/js/integria_incident_search.js: Removed references to
	refresh_table() because new tables design doesn't use different
	colors. Fixed an error when paginating inventories.

	* include/js/jquery.ui.slider.js: Added to repository. Slider jQuery
	UI component.

	* include/languages/date_en.js: Added default date format.

	* include/styles/flora/i/slider-bg-1.png: Updated and removed round
	corners.

	* include/styles/flora/flora.slider.css: Make the sliders a bit wider
	and fixed the background.

	* include/styles/integria.css: Removed background on links.

	* include/config_process.php: Added enterprise definition. Style
	correction.

	* include/functions.php: Added get_periodicities(). Renamed
	get_indicent_priorities() to get_priorities(). Added
	ellipsize_string().

	* include/functions_calendar.php: Fixed human_time_comparation() to
	avoid showing "1.7 minutes". 

	* include/functions_db.php: Improved incident_tracking() and added
	constants to all the types of trackings available to avoid magic
	numbers. Added get_task_hours() and marked give_hours_task() as
	deprecated. check_login() now exits the application. Added ACL checks
	on get_inventories_in_incident(). Added get_inventory_group() to get
	the group of an inventory and checks ACLs easily. get_incident_users()
	don't duplicate owner and creators in affected.
